# turtlebot3_burger_without_localization

./: .gitignore  README.md  bd.sh  clean_bd.sh  params.sh  run.sh  teleop_turtle.sh
src/ee4308_bringup/: CMakeLists.txt  package.xml
src/ee4308_bringup/launch/: labs.launch.py  proj1.launch.py  proj1sim.launch.py
src/ee4308_bringup/models/ee4308_world_24/: model.config  model.sdf
src/ee4308_bringup/models/turtlebot3_burger/: model.config  model.sdf
src/ee4308_bringup/params/: labs.yaml  proj1.yaml
src/ee4308_bringup/rviz/: labs.rviz  proj1.rviz
src/ee4308_bringup/worlds/: ee4308_world_24.world
src/ee4308_interfaces/: CMakeLists.txt  package.xml
src/ee4308_interfaces/srv/: PathOk.srv  PathWithinInflation.srv  Waypoint.srv
src/ee4308_lib/: CMakeLists.txt  package.xml
src/ee4308_lib/include/ee4308_lib/: core.hpp  vec2.hpp
src/ee4308_turtle/: CMakeLists.txt  package.xml
src/ee4308_turtle/include/ee4308_turtle/: behavior.hpp  controller.hpp  estimator.hpp  grid.hpp  mapper.hpp  planner_smoother.hpp  raytracer.hpp
src/ee4308_turtle/src/: behavior.cpp  controller.cpp  estimator.cpp  mapper.cpp  planner_smoother.cpp
test-raytracer/: common.hpp  test_raytracer.cpp  test_raytracer.hpp  vec2.hpp
